<resources>
    <string name="app_name">Cuper</string>
    <string name="timer_text">25:00</string>
    <string name="button_text">Start</string>
    <string name="task_text">Add your tasks here</string>
    <string name="task_subtext">My Tasks</string>
    <string name="add_task">Write your task</string>
    <string name="add_button">Add</string>
    <string name="delete_button">Delete</string>
    <string name="clear_button">Clear</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="deskripsi_apliksi">Cuper is a powerful mobile application designed to assist users in staying focused and productive during their study sessions. By incorporating the popular Pomodoro Technique and a comprehensive to-do list feature, Cuper aims to enhance the learning experience and help users achieve their goals efficiently.</string>
    <string name="belum_ada_data">Belum ada list niihh... Yuk tambahin</string>
    <string name="koneksi_error">Yaahh internetmu menghilaang nih :)</string>
</resources>